server file added

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- <meta name="theme-color" content="#000000"> -->
     <title>Identity Card</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="./../src/style/main.css">
+    <link rel="stylesheet" href="./../src/style/index.css">
     <link href="https://fonts.googleapis.com/css?family=Modern+Antiqua" rel="stylesheet">
   </head>
   <body>
